# weather-forecast

./: .gitignore  README.md  pyproject.toml
data/preprocessed_data/: outdoor_rh.csv  outdoor_temp.csv
data/raw_data/: CLMTEMP_HKO_.csv  daily_HKO_RH_ALL.csv
scripts/: explore_data.py
src/: constants.py  data_preprocessor.py  main.py  schema.py  trainer.py
