[tool.poetry]
name = "weather-forecast"
version = "0.1.0"
description = ""
authors = ["bpht <bennyphtam@gmail.com>"]
readme = "README.md"
packages = [{include = "weather_forecast"}]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
pytorch-forecasting = {extras = ["mqf2"], version = "^1.0.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
